packages/clippier/tests/snapshots/workspace_toolchains_tests__workspace_toolchains_windows.snap
---
source: packages/clippier/tests/workspace_toolchains_tests.rs
expression: parsed
---
{
  "dependencies": [
    "cargo install cargo-machete || true",
    "cargo install taplo-cli || true",
    "vcpkg install openssl"
  ],
  "toolchains": [
    "cargo-machete",
    "taplo"
  ],
  "ci_steps": [
    "echo nightly package setup",
    "git submodule update --init"
  ],
  "env": {
    "NIGHTLY_VAR": "from_nightly_pkg",
    "STABLE_VAR": "from_stable_pkg",
    "WORKSPACE_VAR": "from_workspace"
  },
  "nightly_packages": [
    "pkg-nightly"
  ],
  "git_submodules": true
}
